fix(Player): audio track layout issue

--- a/src/routes/Player/AudioMenu/AudioMenu.less
+++ b/src/routes/Player/AudioMenu/AudioMenu.less
@@ -28,6 +28,7 @@
             padding-bottom: 1rem;
 
             .option {
+                flex: none;
                 display: flex;
                 flex-direction: row;
                 align-items: center;
